--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image-Search</title>
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/style.css">
 </head>
-<body>
-    <h1>Image Search</h1>
 
+<body>
     <div class="form">
-        <input type="text" id="image-search">   
+        <h1>Image Search</h1>
+
+        <input type="text" id="image-search">
         <input type="submit" id="search-image">
     </div>
 
-    <div class="container">
-
-    </div>
+    <div class="container"></div>
 
 
 
-<script src="assets/app.js"></script>
+    <script src="assets/app.js"></script>
 </body>
-</html> 
+
+</html>
